<resources>
    <string name="app_name">ShoeStore</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_instruction">Instruction</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bio">Hi, my name is Aleks.
\n\nI love fish.
\n\nThe kind that is alive and swims around in an aquarium or river, or a lake, and definitely the ocean.
\n\nFun fact is that I have several aquariums and also a river.
\nI like eating fish, too. Raw fish. Grilled fish. Smoked fish. Poached fish - not so much.
\n\nAnd sometimes I even go fishing.
\nAnd even less sometimes, I actually catch something.\n\n</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
\n\nAt vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.\n\n</string>
    <string name="instruction_one_text">
        "Instruction"
    </string>
    <string name="instruction_two_text">
        "Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua."
    </string>
    <string name="title_logout">Logout ShoeStore</string>
    <string name="logout">Logout</string>
    <string name="next">Next</string>
    <string name="title_login">Login ShoeStore</string>
    <string name="shoeName">Shoe name</string>
    <string name="company">Company</string>
    <string name="shoeSize">Shoe size</string>
    <string name="description">Description</string>
</resources>
