<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Use a data block to declare variables. -->
    <data>
        <!-- Declare a variable by specifying a name and a data type. -->
        <!-- Use fully qualified name for the type. -->
        <variable
                name="shoe"
                type="com.udacity.shoestore.Shoe" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent">

        <TextView
                android:text="@string/shoeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textShoeName"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/textCompany"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.112"
                app:layout_constraintVertical_bias="0.719"
                android:layout_marginEnd="22dp"
                app:layout_constraintEnd_toEndOf="parent" />

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@={shoe.shoeName}"
                android:hint="@string/shoeName"
                android:ems="10"
                android:id="@+id/editTextShoeName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/editTextCompany"
                app:layout_constraintHorizontal_bias="0.746"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="30dp" />

        <TextView
                android:id="@+id/textCompany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextShoeName"
                app:layout_constraintBottom_toTopOf="@+id/editTextShoeSize"
                app:layout_constraintVertical_bias="0.348"
                android:layout_marginStart="36dp" />

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@={shoe.shoeCompany}"
                android:hint="@string/company"
                android:ems="10"
                android:id="@+id/editTextCompany"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/editTextShoeSize"
                app:layout_constraintHorizontal_bias="0.746"
                android:layout_marginBottom="30dp"
                app:layout_constraintStart_toStartOf="parent" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoeSize"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextCompany"
                app:layout_constraintBottom_toTopOf="@+id/textView4"
                app:layout_constraintHorizontal_bias="0.099"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="30dp" />

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"

                android:text="@={shoe.shoeSize}"
                android:hint="@string/shoeSize"
                android:ems="10"
                android:id="@+id/editTextShoeSize"
                app:layout_constraintBottom_toTopOf="@+id/editTextDescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.746"
                android:layout_marginBottom="30dp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:id="@+id/textView4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/buttonCancel"
                app:layout_constraintHorizontal_bias="0.105"
                android:layout_marginBottom="44dp"
                app:layout_constraintTop_toBottomOf="@+id/editTextShoeSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias="0.202" />

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:text="@={shoe.shoeDescription}"
                android:hint="@string/description"
                android:gravity="start|top"
                android:ems="10"
                android:id="@+id/editTextDescription"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.746"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.533" />

        <Button
                android:text="Cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonCancel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextDescription"
                app:layout_constraintHorizontal_bias="0.259"
                app:layout_constraintEnd_toEndOf="parent" />

        <Button
                android:text="Save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonSave"
                android:onClick="saveShoe"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextDescription"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.724" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
